Updates to readme and environment

--- a/env.yml
+++ b/env.yml
@@ -1,6 +1,7 @@
-name: base
+name: NDSF
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - conda
   - python=3.9
@@ -15,4 +16,3 @@ dependencies:
   - pandas
   - numba
   - matplotlib
-prefix: /Users/sky/miniconda3
