Changes env, readme, adds lorenz

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: NDSF
+name: NeuralStreamFunction
 channels:
   - defaults
   - conda-forge
@@ -17,3 +17,4 @@ dependencies:
   - numba
   - matplotlib
   - tensorboard
+  - numpy=1.21
